[metadata]
name = ctakes_pbj
version = 4.0.1
author = Computational Health Informatics Program Natural Language Processing Lab
author_email = Dennis.Johns@childrens.harvard.edu
description = Python Bridge to Java for Apache cTAKES
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Johnsd11/ctakes-pbj-v-1.0
project_urls =
    Bug Tracker = https://github.com/Johnsd11/ctakes-pbj-v-1.0/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir=
    = src/main/python
packages = find:
python_requires = >=3.7, <3.9
install_requires =
    dkpro-cassis~=0.7.0
    stomp.py~=8.0.0

[options.packages.find]
where = src/main/python
